--- a/style/style.css
+++ b/style/style.css
@@ -30,6 +30,10 @@ label {
   color: var(--text-accent-color);
 }
 
+dialog {
+  border: 0;
+}
+
 * {
   outline: 0;
   box-sizing: border-box;
@@ -110,4 +114,30 @@ body {
   background: var(--bg-main-color);
   border-top: 1px solid var(--border-color);
   text-align: center;
+}
+
+.dialog {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-size: 1.2rem;
+  background-color: var(--document-bg-color);
+}
+
+.dialog__container {
+  display: flex;
+  flex-direction: column;
+  width: 32em;
+  padding: 0.4em;
+  border: 1px solid var(--border-color);
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 20px var(--shadow-color);
+  background: var(--bg-accent-color);
+  background: var(--component-bg-gradient);
 }
